minor fixex foe exercises list
