# routes/api/exercises.js
@@ -6,8 +6,8 @@ const { schemas } = require("../../models/exercise");
 const router = express.Router();
 
 // router.get("/", authenticate, exercisesCtrl.getAllExercises);
-router.get("/categories", authenticate, exercisesCtrl.getEndpoints);
-router.get("/:filter", authenticate, exercisesCtrl.getCategoryByFilter);
+// router.get("/categories", authenticate, exercisesCtrl.getEndpoints);
+router.get("/groups/:filter", authenticate, exercisesCtrl.getCategoryByFilter);
 router.get(
   "/",
   authenticate,
@@ -17,3 +17,35 @@ router.get(
 
 
 module.exports = router;
+
+/** 
+ "/exercises/categories": {
+            "get": {
+                "tags": [
+                    "Exercises"
+                ],
+                "summary": "Endpoints, categories, filters mapping",
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+            
+                "responses": {
+                    "200": {
+                        "description": "Operation successful",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ExercisesCategoriesResponse"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                }
+            }
+        },
+*/
